--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -50,8 +50,8 @@
                     <ul class="nav" nav-menu>
                         <li ng-class="{active: $routeSegment.startsWith('default')}" ><a href="#/"> Home </a></li>
                         <li ng-class="{active: $routeSegment.startsWith('settings')}"><a href="#/settings"> Settings </a></li>
-                        <li ng-class="{active: $routeSegment.startsWith('login')}"><a href="#/login"> Account </a></li>
-                        <li ng-class="{active: $routeSegment.startsWith('about')}"><a href="#/about"> About</a></li>
+                        <li ng-class="{active: $routeSegment.startsWith('account')}"><a href="#/account"> Account </a></li>
+                        <li ng-class="{active: $routeSegment.startsWith('about')}"><a href="http://geoknow.eu" target="_blanc"> About</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
