Facete installed on Geoknow server, CSS tweaks

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -44,7 +44,7 @@
 	        </div>
 	 </div>
 
-    <div id="contents" class="contents" app-view-segment="0"></div>
+    <div id="contents" app-view-segment="0"></div>
   <!-- THIS IS REPLACED BY THE LINE ABOVE TO USE SEGMENTS <div id="workspace" ng-view></div> -->
 
     <!--  <div id="editor" ace-editor></div>-->
