--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -69,10 +69,11 @@
     <script src="js/app.js"></script>
     <script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/controllers-settings.js"></script>
     <script src="js/filters.js"></script>
     <script src="js/directives.js"></script>
     <script src="lib/osm/OpenLayers.js"></script>
-    <script src="lib/ui-bootstrap/ui-bootstrap-tpls-0.5.0.js"></script>
+    <script src="lib/ui-bootstrap/ui-bootstrap-tpls-0.6.0.min.js"></script>
     <script src="lib/angular-route-segment/angular-route-segment.min.js"></script>
 
   </body>
