add servlet side components and importRdf- not finished

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -75,6 +75,8 @@
     <script src="lib/osm/OpenLayers.js"></script>
     <script src="lib/ui-bootstrap/ui-bootstrap-tpls-0.6.0.min.js"></script>
     <script src="lib/angular-route-segment/angular-route-segment.min.js"></script>
+    <script src="lib/angular-file-upload-master/angular-file-upload.min.js"></script>
+    <script src="lib/angular-file-upload-master/FileAPI.min.js"></script>
 
   </body>
 </html>
