add import from file and Url functionality

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -42,9 +42,14 @@
 	                        </ul>
 	                    </div>
 	        </div>
-	 </div>
+	</div>
+
+
 
     <div id="contents" app-view-segment="0"></div>
+
+
+    
   <!-- THIS IS REPLACED BY THE LINE ABOVE TO USE SEGMENTS <div id="workspace" ng-view></div> -->
 
     <!--  <div id="editor" ace-editor></div>-->
@@ -77,6 +82,7 @@
     <script src="lib/angular-route-segment/angular-route-segment.min.js"></script>
     <script src="lib/angular-file-upload-master/angular-file-upload.min.js"></script>
     <script src="lib/angular-file-upload-master/FileAPI.min.js"></script>
+    <script src="lib/angular-flash.min.js"></script>
 
   </body>
 </html>
