LIMES and Facete form update

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -29,7 +29,7 @@
 
   <body ng-cloak ng-app="app">
 	<div class="navbar navbar-static-top">
-			<div class="container col-lg-12">
+			<div class="container col-xs-12">
 	                <a class="navbar-brand" href="#/"></a>
 	                    <div ng-controller="NavbarCtrl">
 	                    	<ul class="nav navbar-nav navbar-left">
