a commit for merge

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -71,6 +71,7 @@
     <script src="lib/angularjs/angular.js"></script>
     <script src="lib/modal-master/bootstrap-modal.js"></script>
     <script src="lib/modal-master/bootstrap-modalmanager.js"></script>
+    <script src="js/config.js"></script>
     <script src="js/app.js"></script>
     <script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
