--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,6 +12,8 @@
     <link href="css/bootstrap-modal-bs3patch.css" rel="stylesheet"/>
     <link href="css/bootstrap-modal.css" rel="stylesheet"/>
     <link href="css/app.css" rel="stylesheet"/>
+    
+    <link rel="icon" type="image/png" href="img/favicon.png">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
