Added geolift popup, started on save function.

--- a/src/main/webapp/popup.html
+++ b/src/main/webapp/popup.html
@@ -30,7 +30,11 @@
   </head>
 
   <body ng-cloak ng-app="app">
-
+  	<div class="navbar">
+			<div class="container col-xs-12">
+	                <div class="navbar-brand"></div>
+	        </div>
+	</div>
 
     <div id="contents" app-view-segment="0"></div>
 
