--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -68,7 +68,7 @@
 <!--     <script src="lib/ace/ace.js" charset="utf-8"></script>
     <script src="https://apis.google.com/js/api.js"></script>
     <script src="https://www.google.com/jsapi"></script> -->
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+<!--     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script> -->
     <script src="lib/bootstrap/bootstrap.js"></script>
     <script src="lib/angularjs/angular.js"></script>
     <script src="lib/angularjs/angular-route.js">
