--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -35,7 +35,7 @@
 	                <a class="navbar-brand" href="#/"></a>
 	                    <div ng-controller="NavbarCtrl">
 	                    	<ul class="nav navbar-nav navbar-left">
-	                        <li ng-class="getClass('/home')"><a href="#/"><div class="glyphicon glyphicon-home"></div> Home </a></li>
+	                        <li ng-class="getClass('/home')"><a href="#/"><div class="glyphicon glyphicon-cog"></div> Workbench </a></li>
 	                        <li ng-class="getClass('/settings')"><a href="#/settings"><div class="glyphicon glyphicon-wrench"></div> Settings </a></li>
 	                        </ul>
 	                        <ul class="nav navbar-nav navbar-right">
