--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -36,6 +36,7 @@
 	                    <div ng-controller="NavbarCtrl">
 	                    	<ul class="nav navbar-nav navbar-left">
 	                        <li ng-class="getClass('/home')"><a href="#/"><div class="glyphicon glyphicon-cog"></div> Workbench </a></li>
+	                        <!-- <li ng-class="getClass('/batch')""><a href="#/batch"><div class="glyphicon glyphicon-list"></div> Batch job </a></li> -->
 	                        <li ng-class="getClass('/settings')"><a href="#/settings"><div class="glyphicon glyphicon-wrench"></div> Settings </a></li>
 	                        </ul>
 	                        <ul class="nav navbar-nav navbar-right">
@@ -86,6 +87,5 @@
     <script src="lib/angular-file-upload-master/angular-file-upload.min.js"></script>
     <script src="lib/angular-file-upload-master/FileAPI.min.js"></script>
     <script src="lib/angular-flash.min.js"></script>
-
   </body>
 </html>
