Fixed buttons & modals

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -87,7 +87,7 @@
              </div>
              
              <div class="modal-footer">
-                <button type="submit" class="btn-sm btn-success" ng-click="login();" ng-disabled="loginForm.$invalid">Sign in</button>
+                <button type="submit" class="btn-sm btn-primary" ng-click="login();" ng-disabled="loginForm.$invalid">Sign in</button>
                 <button type="button" class="btn-sm btn-default" ng-click="close('#modalLogin')">Cancel</button>
             </div>
     </form>
@@ -126,7 +126,7 @@
              </div>
              
              <div class="modal-footer">
-                <button type="submit" class="btn-sm btn-success" ng-click="createAccount();" ng-disabled="signUpForm.$invalid">Register</button>
+                <button type="submit" class="btn-sm btn-primary" ng-click="createAccount();" ng-disabled="signUpForm.$invalid">Register</button>
                 <button type="button" class="btn-sm btn-default" ng-click="close('#modalSignUp')">Cancel</button>
             </div>
     </form>
@@ -154,7 +154,7 @@
                   </div>
               </div>
               <div class="modal-footer">
-                  <button type="submit" class="btn-sm btn-success" ng-click="restorePassword();" ng-disabled="restorePasswordForm.$invalid">Request password</button>
+                  <button type="submit" class="btn-sm btn-primary" ng-click="restorePassword();" ng-disabled="restorePasswordForm.$invalid">Request password</button>
                   <button type="button" class="btn-sm btn-default" ng-click="close('#modalRestorePassword')">Cancel</button>
               </div>
           </form>
