--- a/src/main/webapp/popup.html
+++ b/src/main/webapp/popup.html
@@ -53,10 +53,10 @@
     <script src="lib/jquery/jquery-1.9.1.js"></script>
     <script src="lib/jquery/jquery-ui-1.10.1.custom.min.js"></script>
      
-<!--     <script src="lib/ace/ace.js" charset="utf-8"></script> -->
-    <script src="lib/bootstrap/bootstrap.js"></script>
+	<script src="lib/bootstrap/bootstrap.js"></script>
     <script src="lib/angularjs/angular.js"></script>
-    <script src="lib/angularjs/angular-route.js">
+    <script src="lib/angularjs/angular-cookies.js"></script>
+    <script src="lib/angularjs/angular-route.js"></script>
     <script src="lib/modal-master/bootstrap-modal.js"></script>
     <script src="lib/modal-master/bootstrap-modalmanager.js"></script>
     <script src="js/config.js"></script>
