fixes and more refactoring

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -187,9 +187,19 @@
     <script src="lib/modal-master/bootstrap-modalmanager.js"></script>
     <script src="js/config.js"></script>
     <script src="js/app.js"></script>
+    <!-- services for the different modules/pages -->
     <script src="js/services.js"></script>
+    <script src="js/configuration-service.js"></script>
+    <script src="js/graph-service.js"></script>
+    <script src="js/account-service.js"></script>
+    <script src="js/login-service.js"></script>
+    <script src="js/graph-group-service.js"></script>
+    <!-- controllers for the different modules/pages -->
     <script src="js/controllers.js"></script>
     <script src="js/controllers-settings.js"></script>
+    <script src="js/settings/settings-controller.js"></script>
+    <script src="js/settings/datasets/datasets-controller.js"></script>
+    <!-- directives -->
     <script src="js/directives.js"></script>
     <script src="lib/osm/OpenLayers.js"></script>
     <script src="lib/ui-bootstrap/ui-bootstrap-tpls-0.6.0.min.js"></script>
