project number; project and owner select with search

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,6 +12,8 @@
     <link href="css/bootstrap-modal.css" rel="stylesheet"/>
     <!-- <link href="css/bootstrap-modal-bs3patch.css" rel="stylesheet"/> -->
     <link href="css/app.css" rel="stylesheet"/>
+    <link href="css/chosen.min.css" rel="stylesheet"/>
+    <link href="css/chosen-bootstrap.css" rel="stylesheet"/>
     
     <link rel="icon" type="image/ico" href="img/favicon.ico">
 
@@ -195,5 +197,7 @@
     <script src="lib/angular-file-upload-master/angular-file-upload.min.js"></script>
     <script src="lib/angular-file-upload-master/FileAPI.min.js"></script>
     <script src="lib/angular-flash.min.js"></script>
+    <script src="lib/chosen.jquery.min.js"></script>
+    <script src="lib/chosen.js"></script>
   </body>
 </html>
