--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,6 +14,7 @@
     <link href="css/app.css" rel="stylesheet"/>
     <link href="css/chosen.min.css" rel="stylesheet"/>
     <link href="css/chosen-bootstrap.css" rel="stylesheet"/>
+    <link href="css/jquery-ui-themes-1.10.1/smoothness/jquery-ui.css" rel="stylesheet"/>
     
     <link rel="icon" type="image/ico" href="img/favicon.ico">
 
@@ -199,5 +200,6 @@
     <script src="lib/angular-flash.min.js"></script>
     <script src="lib/chosen.jquery.min.js"></script>
     <script src="lib/chosen.js"></script>
+    <script src="lib/date.js"></script>
   </body>
 </html>
