--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -57,6 +57,9 @@
                                     	<button type="button" class="btn-xs btn-link navbar-left" data-toggle="modal" data-target="#modalRestorePassword" ng-show="currentAccount.username==null" data-i18n="_forgot-password_"></button>
                             </div>
                             </li>
+                            <li>
+                                <select class="lang-select" id="lang" ng-model="currentLanguage" ng-options="lang for lang in languages" ng-change="setLanguage();"></select>
+                            </li>
 	                        <!-- <li><a href="http://geoknow.eu" target="_blanc"><div class="glyphicon glyphicon-info-sign"></div> About</a></li> -->
 	                        </ul>
 	                    </div>
