--- a/src/main/webapp/js/settings/settings.html
+++ b/src/main/webapp/js/settings/settings.html
@@ -17,7 +17,8 @@
 	  
     <h3 class="green bold">Generator Settings</h3>
 
-	<table class="table table-bordered" ng-if="currentAccount.username" style="width:60%">
+	<!-- <table class="table table-bordered" ng-if="currentAccount.username" style="width:60%"> -->
+	<table class="table table-bordered" style="width:60%">
     	<tr>
         <td>URI Base:</td><td>{{settings.uriBase}}</td>
         </tr>
