--- a/src/main/webapp/popup.html
+++ b/src/main/webapp/popup.html
@@ -63,7 +63,17 @@
     <script src="js/app.js"></script>
     <script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
-    <script src="js/controllers-settings.js"></script>
+
+    <!-- TODO: check what libraries should be added here, refactoring changed -->
+
+    <!-- controllers for the different modules/pages -->
+    <script src="js/controllers.js"></script>
+    <script src="js/login-controller.js"></script>
+    <script src="js/workbench/extraction-and-loading/triplegeo-controller.js"></script>
+    <script src="js/workbench/classification-and-enrichment/geolift-controller.js"></script>
+    <script src="js/workbench/linking-and-fusing/limes-controller.js"></script>
+
+
     <script src="js/directives.js"></script>
     <script src="lib/osm/OpenLayers.js"></script>
     <script src="lib/ui-bootstrap/ui-bootstrap-tpls-0.6.0.min.js"></script>
