--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -30,6 +30,13 @@
 
   <body ng-cloak ng-app="app" ng-controller="LoginCtrl">
 
+      <!-- Subscribe to all flash messages. -->
+      <div flash-alert active-class="in alert" class="fade" duration="0">
+        <button type="button" class="close" ng-click="hide()">&times;</button>
+        <span class="alert-message">{{flash.message}}</span>
+      </div>
+      </div>
+      
 	<div class="navbar navbar-static-top">
 	<div class="col-xs-2">
 	</div>
@@ -39,16 +46,18 @@
 	                    	<ul class="nav navbar-nav navbar-left">
 	                        <li ng-class="getClass('/home')"><a href="#/"><div class="glyphicon glyphicon-cog"></div> Workbench </a></li>
 	                        <!-- <li ng-class="getClass('/batch')""><a href="#/batch"><div class="glyphicon glyphicon-list"></div> Batch job </a></li> -->
-	                        <li ng-class="getClass('/settings')"><a href="#/settings"><div class="glyphicon glyphicon-wrench"></div> Settings </a></li>
-	                        <li ng-class="getClass('/account')"><a href="#/account"><div class="glyphicon glyphicon-user"></div> Account </a></li>
+	                        <li ng-class="getClass('/settings')">
+                            <a href="#/settings"><div class="glyphicon glyphicon-wrench"></div> Settings </a></li>
+	                        <li ng-if="isUserAuthenticated()" ng-class="getClass('/account')">
+                            <a href="#/account"><div class="glyphicon glyphicon-user"></div> Account </a></li>
 	                        </ul>
 	                        
 	                        <ul class="nav navbar-nav navbar-right">
                             <li>
-                            <div ng-show="currentAccount.username">
+                            <div ng-if="isUserAuthenticated()">
                                         <span class="strong">You are logged in as <strong>{{currentAccount.username}}</strong></span> <button class="btn-sm btn-success" ng-click="logout()">Logout</button>
                             </div>
-                            <div ng-hide="loggedIn">
+                            <div ng-if="!isUserAuthenticated()">
                                         <!-- ng-disabled="loginForm.$invalid" -->
                                         <button type="button" class="btn-sm btn-success navbar-left" data-toggle="modal" data-target="#modalLogin" ng-click="openModal()">Login</button>
                                         <button type="button" class="btn-xs btn-link navbar-left" data-toggle="modal" data-target="#modalSignUp" ng-click="new();">Register</button>
@@ -185,20 +194,35 @@
     <script src="lib/angularjs/angular-route.js"></script>
     <script src="lib/modal-master/bootstrap-modal.js"></script>
     <script src="lib/modal-master/bootstrap-modalmanager.js"></script>
-    <script src="js/config.js"></script>
     <script src="js/app.js"></script>
     <!-- services for the different modules/pages -->
-    <script src="js/services.js"></script>
-    <script src="js/configuration-service.js"></script>
-    <script src="js/graph-service.js"></script>
-    <script src="js/account-service.js"></script>
-    <script src="js/login-service.js"></script>
-    <script src="js/graph-group-service.js"></script>
+    <script src="js/services/config.js"></script>
+    <script src="js/services/services.js"></script>
+    <script src="js/services/configuration-service.js"></script>
+    <script src="js/services/graph-service.js"></script>
+    <script src="js/services/account-service.js"></script>
+    <script src="js/services/login-service.js"></script>
+    <script src="js/services/graph-group-service.js"></script>
     <!-- controllers for the different modules/pages -->
     <script src="js/controllers.js"></script>
-    <script src="js/controllers-settings.js"></script>
+    <script src="js/login-controller.js"></script>
+    <script src="js/workbench/extraction-and-loading/import-rdf-controller.js"></script>
+    <script src="js/workbench/extraction-and-loading/sparqlify-controller.js"></script>
+    <script src="js/workbench/extraction-and-loading/triplegeo-controller.js"></script>
+    <script src="js/workbench/search-querying-and-exploration/facete-controller.js"></script>
+    <script src="js/workbench/search-querying-and-exploration/mappify-controller.js"></script>
+    <script src="js/workbench/search-querying-and-exploration/virtuoso-controller.js"></script>
+    <script src="js/workbench/manual-revision-and-authoring/ontowiki-controller.js"></script>
+    <script src="js/workbench/classification-and-enrichment/geolift-controller.js"></script>
+    <script src="js/workbench/linking-and-fusing/limes-controller.js"></script>
     <script src="js/settings/settings-controller.js"></script>
-    <script src="js/settings/datasets/datasets-controller.js"></script>
+    <script src="js/settings/datasets/graphs-controller.js"></script>
+    <script src="js/settings/data-sources/endpoint-controller.js"></script>
+    <script src="js/settings/data-sources/database-controller.js"></script>
+    <script src="js/settings/namespaces/namespaces-controller.js"></script>
+    <script src="js/settings/components/components-controller.js"></script>
+    <script src="js/account/account-controller.js"></script>
+
     <!-- directives -->
     <script src="js/directives.js"></script>
     <script src="lib/osm/OpenLayers.js"></script>
