--- a/src/main/webapp/js/settings/data-sources/data-sources.html
+++ b/src/main/webapp/js/settings/data-sources/data-sources.html
@@ -1,13 +1,10 @@
 
 
-<h3 class="green bold">Data Sources</h3>
-
-
 <h4>SPARQL Endpoint</h4>
 
 <div ng-controller="EndpointCtrl">
 
-  <button type="button" class="btn btn-success btn-large"
+  <button ng-if="isUserAuthenticated()" type="button" class="btn btn-success btn-large"
     ng-click="new();" data-toggle="modal" data-target="#modalEndpoint">Add new Endpoint</button>
 
   <div class="modal fade" id="modalEndpoint">
@@ -69,7 +66,7 @@
   <table class="table table-striped">
   <thead>
     <tr>
-      <th>Action</th>
+      <th ng-if="isUserAuthenticated()">Action</th>
       <th>Uri</th>
       <th>Label</th>
       <th>Endpoint</th>
@@ -78,7 +75,7 @@
   </thead>
   <tbody>
     <tr ng-repeat="endpoint in endpoints">
-      <td>
+      <td ng-if="isUserAuthenticated()">
         <button type="button" class="btn btn-default btn-xs" ng-click="delete('{{endpoint.uri}}')"><span class="glyphicon glyphicon-trash"></span></button>
         <button type="button" class="btn btn-default btn-xs" ng-click="edit('{{endpoint.uri}}');" data-toggle="modal" data-target="#modalEndpoint"><span class="glyphicon glyphicon-edit"></span></button>
       </td>
@@ -97,7 +94,7 @@
 
 <div ng-controller="DatabaseCtrl">
 
-  <button type="button" class="btn btn-success btn-large"
+  <button ng-if="isUserAuthenticated()" type="button" class="btn btn-success btn-large"
     ng-click="new();" data-toggle="modal" data-target="#modalDatabase">Add new Database</button>
 
   <div class="modal fade" id="modalDatabase">
@@ -195,7 +192,7 @@
   <table class="table table-striped">
   <thead>
     <tr>
-      <th>Action</th>
+      <th ng-if="isUserAuthenticated()">Action</th>
       <th>Uri</th>
       <th>Label</th>
       <th>Type</th>
@@ -206,7 +203,7 @@
   </thead>
   <tbody>
     <tr ng-repeat="database in databases">
-      <td>
+      <td ng-if="isUserAuthenticated()">
         <button type="button" class="btn btn-default btn-xs" ng-click="delete('{{database.uri}}')"><span class="glyphicon glyphicon-trash"></span></button>
         <button type="button" class="btn btn-default btn-xs" data-toggle="modal" data-target="#modalDatabase" ng-click="edit('{{database.uri}}'); "><span class="glyphicon glyphicon-edit"></span></button>
       </td>
