Added Account controller to html.

--- a/src/main/webapp/js/account/account.html
+++ b/src/main/webapp/js/account/account.html
@@ -1,4 +1,4 @@
-<div class="row contents">
+<div class="row contents" ng-controller="AccountCtrl">
   <div class="col-lg-2">
 
     <!--            <div class="panel-group" id="accordion" ng-controller="AccountMenuCtrl">
