--- a/src/main/webapp/js/workbench/search-querying-and-exploration/mappify.html
+++ b/src/main/webapp/js/workbench/search-querying-and-exploration/mappify.html
@@ -26,7 +26,7 @@
     </div>
     <div class="form-group">
       <div class="col-xs-1"></div>
-      <a class="btn btn-success btn-large" data-toggle="modal" ng-click="setUrl(); openModal();">Launch Mappify</a>
+      <a class="btn btn-success btn-large" data-toggle="modal" ng-click="setUrl(); openModal();" data-i18n="_mappify-launch_"></a>
     </div>
     </div>
   </form>
