--- a/src/main/webapp/js/workbench/extraction-and-loading/sparqlify.html
+++ b/src/main/webapp/js/workbench/extraction-and-loading/sparqlify.html
@@ -21,7 +21,7 @@
       </select>
     </div>
  -->    <div class="form-group">
-      <a class="btn btn-success btn-large" data-toggle="modal" ng-click="setUrl(); openModal();">Launch Sparqlify</a>
+      <a class="btn btn-success btn-large" data-toggle="modal" ng-click="setUrl(); openModal();" data-i18n="_sparqlify-launch_"></a>
     </div>
   </form>
 
