--- a/src/main/webapp/js/workbench/extraction-and-loading/triplegeo-result.html
+++ b/src/main/webapp/js/workbench/extraction-and-loading/triplegeo-result.html
@@ -6,7 +6,7 @@
 	</div>
 
 	<h3 class="green bold">TripleGeo</h3>
-	<b>Utility for Converting Geospatial Data into Triples</b>
+	<b data-i18n="_triplegeo-description_"></b>
 	<br>
 	<br>
 
@@ -20,13 +20,13 @@
 	</div>
 	<div class="row">
 	<div class="col-xs-11" ng-show="showProgress">
-		<b>This might take a while... Please keep this browser window open. You can view and save the results here when execution is complete.</b>
+		<b data-i18n="_wait-results-message_"></b>
 	</div>
 	</div>
 
 <form class="form-horizontal InputForm col-xs-11" role="form" ng-show="reviewForm">
 	<div class="row">
-		<h5 class="green bold">Results</h5>
+		<h5 class="green bold" data-i18n="_results_"></h5>
 	</div>
 	<br>
 	<div class="row below">
@@ -34,18 +34,18 @@
 	</div>
 	<br>
 	<div class="row below">
-		<b>Select the graph which you would like to save to.</b>
+		<b data-i18n="_select-graph-save-message_"></b>
 	<br>
 	</div>
 	<div class="row">
-	<label>Graph</label>
+	<label data-i18n="_graph_"></label>
     <select class="form-control" ng-model="saveDataset" ng-options="namedgraph.name as namedgraph.name for namedgraph in namedGraphs" required>
     </select>
   </div>
 	<br/>
 	<div class="row">
 		<div class="pull-left" style="padding-left:0">
-			  <a class="btn btn-sm btn-success" ng-click="save()">Save Results</a>
+			  <a class="btn btn-sm btn-success" ng-click="save()" data-i18n="_save-results_"></a>
 		</div>
 	</div>
 </form>
