--- a/src/main/webapp/js/workbench/saveResults.html
+++ b/src/main/webapp/js/workbench/saveResults.html
@@ -1,16 +1,16 @@
 <div class="row below">
-		<b>Select the graph which you would like to save to.</b>
+		<b data-i18n="_select-graph-save-message_"></b>
 	<br>
 	</div>
 	<div class="row">
-	<label>Graph</label>
+	<label data-i18n="_graph_"></label>
     <select class="form-control" ng-model="dataset" ng-options="namedgraph.name as namedgraph.name for namedgraph in namedGraphs" required>
     </select>
   </div>
 	<br/>
 	<div class="row">
 		<div class="pull-left" style="padding-left:0">
-			  <a class="btn btn-sm btn-success" ng-click="save()">Save</a>
+			  <a class="btn btn-sm btn-success" ng-click="save()" data-i18n="_save_"></a>
 		</div>
 	</div>
 </div>
@@ -20,6 +20,6 @@
 <br>
 <div class="row">
 	<div class="pull-left" style="padding-left:0">
-	  <a class="btn btn-sm btn-success" ng-click="save()">Save results in new graphs</a>
+	  <a class="btn btn-sm btn-success" ng-click="save()" data-i18n="_save-res-in-new-graph_"></a>
 	</div>
 </div>
