--- a/src/main/webapp/js/workbench/search-querying-and-exploration/facete.html
+++ b/src/main/webapp/js/workbench/search-querying-and-exploration/facete.html
@@ -26,7 +26,7 @@
       </div>
     </div>
     <div class="form-group">
-      <a class="btn btn-success btn-large" data-toggle="modal" ng-click="setUrl(); openModal();">Launch Facete</a>
+      <a class="btn btn-success btn-large" data-toggle="modal" ng-click="setUrl(); openModal();"data-i18n="_facete-launch_"></a>
     </div>
   </form>
 
