--- a/src/main/webapp/js/workbench/search-querying-and-exploration/virtuoso.html
+++ b/src/main/webapp/js/workbench/search-querying-and-exploration/virtuoso.html
@@ -9,7 +9,7 @@
       <dt>{{'_homepage_' | i18n}}:</dt><dd>{{component.homepage}}</dd>
     </dl>
 
-    <h4>Launch SPARQLEndPoint Services</h4>
+    <h4 data-i18n="_launch-virtuoso_"></h4>
 
     <form name="virtuosoForm" class="form-horizontal InputForm" role="form" novalidate>
       <div class="form-group">
@@ -40,7 +40,7 @@
     <div class="modal-content">
     <div class="modal-header">
       <button type="button" class="close" ng-click="close('#fullModal')" aria-hidden="true">&times;</button>
-      <h5 class="modal-title green bold">Virtuoso SPARQLEndpoint</h5>
+      <h5 class="modal-title green bold" data-i18n="_virtuoso-sparql-endpoint_"></h5>
     </div>
     <div class="modal-body">
       <modal-iframe></modal-iframe>
