--- a/src/main/webapp/popup.html
+++ b/src/main/webapp/popup.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Ontos Linked Data Suite</title>
+    <title data-i18n="_home-title_"></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content=""/>
     <meta name="author" content=""/>
